# image_trimmer

./: .clang-format  .clangd  .gitignore  Doxyfile  LICENSE.md  README.md  project_manager.py
.cache/clangd/index/: CLI11.hpp.C03CA05DD0F9FEB6.idx  compress.hpp.1314FD6ADC6BF38D.idx  image.cpp.16248EEDABC46A90.idx  image.hpp.8599532A5E4CEF60.idx  main.cpp.4B7039FFF8FA6303.idx  main.hpp.0BA74EAEBCCBA23A.idx  progress.hpp.3DAB0A88FE1700B9.idx  rect.hpp.C57B8003A4EF2AF0.idx  stb_image.hpp.587FCB06AD6083C4.idx  stb_image_write.hpp.C2B678464F112BD8.idx
inc/: compress.hpp  image.hpp  main.hpp  progress.hpp  rect.hpp  stb_image.hpp  stb_image_write.hpp
scripts/: CMakeLists.txt  animations.py  show.py  utilities.cmake
src/: image.cpp  main.cpp
